Objectify and clean up

--- a/app/index.html
+++ b/app/index.html
@@ -14,9 +14,12 @@
     <!-- Load scripts -->
     <script src="js/util.js"></script>
     <script src="js/canvas.js"></script>
-    <script src="js/HexRenderer.js"></script>
+    <script src="js/Renderers.js"></script>
+    <script src="js/cycle.js"></script>
 
     <!-- Start cycle -->
-    <script src="js/cycle.js"></script>
+    <script>
+        Cycle.getInstance().start(30);
+    </script>
 </body>
 </html>
