--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,7 @@
     <!-- Start cycle -->
     <script>
         Cycle.getInstance().start(30);
+        new HexRenderer(Canvas.getInstance());
     </script>
 </body>
 </html>
