--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
     <!-- Start cycle -->
     <script>
         Cycle.getInstance().start(fps=30);
-        new AdvancedRenderer(Canvas.getInstance());
+        new HexRenderer(Canvas.getInstance());
     </script>
 </body>
 </html>
