Start renovating renderers

--- a/app/index.html
+++ b/app/index.html
@@ -18,9 +18,6 @@
     <script src="js/Cycle.js"></script>
 
     <!-- Start cycle -->
-    <script>
-        Cycle.getInstance().start(fps=30);
-        new HexRenderer(Canvas.getInstance());
-    </script>
+    <script src="js/Animation.js"></script>
 </body>
 </html>
